--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -2,8 +2,11 @@
     padding-top:2em;
     display:grid;
     justify-items: center;
-    grid-gap:1em
+    grid-gap:1em;
+    position:relative
 }
+
+
 
 @media (min-width:40em) {
     .projects {
@@ -17,3 +20,39 @@
         padding-top: 2em;
     }
 }
+
+.container {
+    position: relative;
+  }
+  
+  .image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+  }
+  
+  .middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+  }
+  
+  .container:hover .image {
+    opacity: 0.2;
+  }
+  
+  .container:hover .middle {
+    opacity: 1;
+  }
+  
+  .text {
+    color: black;
+  }
