--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,9 +1,10 @@
 .footer {
     background-color: #6498AF;
     color: white;
-    padding:1em;
+    padding: 1em;
+    padding-left:2em;
+    padding-right:2em;
     display:grid;
     grid-template-columns: 1fr 1fr;
-    font-size: .7em;
-    font-family: 'Manuale';
+
 }
